--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <sonar.projectKey>Kitoou_templatePol</sonar.projectKey>
-        <sonar.organization>kitoou</sonar.organization>
+        <sonar.projectKey>cs2901-2021-1_EfinalPaulrios</sonar.projectKey>
+        <sonar.organization>cs2901-2021-1</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <repositories>
